Add some error to deal with uncaught exceptions and 404 errors
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2570 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -74,6 +74,16 @@
         <servlet-name>UsernamePasswordAuthHandler</servlet-name>
         <url-pattern>/Authn/UserPassword</url-pattern>
     </servlet-mapping>
+    
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/idp-error.jsp</location>
+    </error-page>
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/idp-404.jsp</location>
+    </error-page>
 
 <!-- Uncomment to use container managed authentication -->
 <!--
@@ -109,7 +119,7 @@
         <realm-name>IdP Password Authentication</realm-name>
         <form-login-config>
             <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/error.jsp</form-error-page>
+            <form-error-page>/login-error.jsp</form-error-page>
         </form-login-config>
     </login-config>
 -->
