New IdP install process
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2576 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.properties
+++ b/build.properties
@@ -10,6 +10,7 @@ thirdpaty-lib.dir=${basedir}/thirdparty-lib
 resources.dir=${basedir}/resources
 classpathres.dir=${resources.dir}/classpath
 conf.dir=${resources.dir}/conf
+metadata.dir=${resources.dir}/metadata
 metainf.dir=${resources.dir}/META-INF
 webinf.dir=${resources.dir}/WEB-INF
 webpages.dir=${resources.dir}/webpages
@@ -41,6 +42,6 @@ webinf-temp.dir=${build.dir}/WEB-INF
 base-package.name = identityprovider
 version = trunk
 dist.dir=${basedir}/dist
-jar.name=${base-package.name}-${version}-jdk-${jdk.target}.jar
-src-dist.name=${base-package.name}-${version}-jdk-${jdk.target}-src
-bin-dist.name=${base-package.name}-${version}-jdk-${jdk.target}-bin
+jar.name=${base-package.name}-${version}.jar
+src-dist.name=${base-package.name}-${version}-src
+bin-dist.name=${base-package.name}-${version}-bin
