Add informational message prior to key/cert generation as it can take a couple seconds
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2579 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -193,6 +193,7 @@
             
         <regexSplit input="${idp.hostname}" regex="^.*\.(.*\..*$)" addproperty="idp.scope" />
             
+        <echo message="Generating signing and encryption key and certificate. "/>
         <selfSignedCert hostname="${idp.hostname}"
                         privateKeyFile="${idp.home}/credentials/idp.key"
                         certificateFile="${idp.home}/credentials/idp.crt" />
