--- a/build.xml
+++ b/build.xml
@@ -198,9 +198,6 @@
                 <input message="What is the hostname of the Shibboleth Identity Provider server?"
                        addproperty="idp.hostname" />
 
-                <input message="Would you like to be asked these questions again, in th future, or always install using the answers you just provided? [yes/no]"
-                       addproperty="silent.install" />
-
                 <var name="idp.entity.id" value="https://${idp.hostname}/shibboleth" />
 
                 <regexSplit input="${idp.hostname}" regex="^.*\.(.*\..*$)" addproperty="idp.scope" />
@@ -233,7 +230,7 @@
 
                 <stringFromFile input="${idp.home}/credentials/idp.crt" addProperty="idp.cert" />
                 <regexSplit input="${idp.cert}"
-                            regex="\A.*-----\s((?:.*\s)*).*-----\Z"
+                            regex="\A.*-----\s((?:.*\s)*)-----END.*\Z"
                             addproperty="idp.metadata.cert" />
                 <copy todir="${idp.home}/metadata" preservelastmodified="true" overwrite="${idp.overwrite-config}">
                     <fileset dir="${metadata.dir}" />
@@ -260,6 +257,7 @@
                 <filter token="IDP_VERSION" value="${version}" />
             </filterset>
         </copy>
+
         <jar destfile="${idp.home}/war/${war.name}" whenempty="fail">
             <zipfileset dir="${webinf-temp.dir}" prefix="WEB-INF/" />
             <zipfileset dir="${webpages.dir}" prefix="" />
