--- a/build.xml
+++ b/build.xml
@@ -196,13 +196,13 @@
                 <var name="idp.home" value="${idp.home.input}" />
 
                 <input message="What is the hostname of the Shibboleth Identity Provider server? [default: ${idp.hostname}]"
-                       addproperty="idp.hostname.inout"
-                    defaultvalue="${idp.hostname}"/>
+                       addproperty="idp.hostname.input"
+                       defaultvalue="${idp.hostname}" />
                 <var name="idp.hostname" value="${idp.hostname.input}" />
 
                 <propertyfile file="build.properties">
-                    <entry key="idp.hostname" value="${idp.hostname.input}" />
                     <entry key="idp.home" value="${idp.home.input}" />
+                    <entry key="idp.hostname" value="${idp.hostname.input}" />
                 </propertyfile>
 
                 <var name="idp.entity.id" value="https://${idp.hostname}/shibboleth" />
@@ -223,7 +223,7 @@
                 </copy>
                 <chmod file="${idp.home}/bin/*.sh" perm="+x" />
 
-                <copy todir="${idp.home}/conf" preservelastmodified="true" overwrite="${idp.overwrite-config}">
+                <copy todir="${idp.home}/conf" preservelastmodified="true" overwrite="true">
                     <fileset dir="${conf.dir}" />
                     <filterset begintoken="$" endtoken="$">
                         <filter token="IDP_HOME" value="${idp.home}" />
@@ -239,7 +239,7 @@
                 <regexSplit input="${idp.cert}"
                             regex="\A.*-----\s((?:.*\s)*)-----END.*\Z"
                             addproperty="idp.metadata.cert" />
-                <copy todir="${idp.home}/metadata" preservelastmodified="true" overwrite="${idp.overwrite-config}">
+                <copy todir="${idp.home}/metadata" preservelastmodified="true" overwrite="true">
                     <fileset dir="${metadata.dir}" />
                     <filterset begintoken="$" endtoken="$">
                         <filter token="IDP_ENTITY_ID" value="${idp.entity.id}" />
