Display nicer error page if exceptions are thrown by the container
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2595 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -76,8 +76,8 @@
     </servlet-mapping>
     
     <error-page>
-        <exception-type>java.lang.Exception</exception-type>
-        <location>/idp-error.jsp</location>
+        <error-code>500</error-code>
+        <location>/idp-exception.jsp</location>
     </error-page>
     
     <error-page>
