Minor default config file changes Change generated entity ID to https://host/idp/shibboleth
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2596 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -204,7 +204,7 @@
                 <mkdir dir="${idp.home}/metadata" />
                 <mkdir dir="${idp.home}/war" />
 
-                <var name="idp.entity.id" value="https://${idp.hostname}/shibboleth" />
+                <var name="idp.entity.id" value="https://${idp.hostname}/idp/shibboleth" />
 
                 <regexSplit input="${idp.hostname}" regex="^.*\.(.*\..*$)" addproperty="idp.scope" />
 
