store install properties in install.properties not build.properties
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2599 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -190,7 +190,7 @@
                        defaultvalue="${idp.hostname}" />
                 <var name="idp.hostname" value="${idp.hostname.input}" />
 
-                <propertyfile file="build.properties">
+                <propertyfile file="install.properties">
                     <entry key="idp.home" value="${idp.home.input}" />
                     <entry key="idp.hostname" value="${idp.hostname.input}" />
                 </propertyfile>
