Clean up error pages.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2603 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -77,12 +77,12 @@
     
     <error-page>
         <error-code>500</error-code>
-        <location>/idp-exception.jsp</location>
+        <location>/error.jsp</location>
     </error-page>
     
     <error-page>
         <error-code>404</error-code>
-        <location>/idp-404.jsp</location>
+        <location>/error.jsp</location>
     </error-page>
 
 <!-- Uncomment to use container managed authentication -->
