Minor error page fixup
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2633 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -82,7 +82,7 @@
     
     <error-page>
         <error-code>404</error-code>
-        <location>/error.jsp</location>
+        <location>/error-404.jsp</location>
     </error-page>
 
 <!-- Uncomment to use container managed authentication -->
