--- a/build.xml
+++ b/build.xml
@@ -166,6 +166,9 @@
                        addproperty="idp.hostname.input"
                        defaultvalue="${idp.hostname}" />
                 <var name="idp.hostname" value="${idp.hostname.input}" />
+                
+                <input message="A keystore is about to be generated for you. Please enter a password that will be used to protect it."
+                       addproperty="idp.keystore.pass" />
 
                 <propertyfile file="install.properties">
                     <entry key="idp.home" value="${idp.home.input}" />
@@ -185,10 +188,12 @@
 
                 <regexSplit input="${idp.hostname}" regex="^.*\.(.*\..*$)" addproperty="idp.scope" />
 
-                <echo message="Generating signing and encryption key and certificate. " />
+                <echo message="Generating signing and encryption key, certificate, and keystore. " />
                 <selfSignedCert hostname="${idp.hostname}"
                                 privateKeyFile="${idp.home}/credentials/idp.key"
-                                certificateFile="${idp.home}/credentials/idp.crt" />
+                                certificateFile="${idp.home}/credentials/idp.crt"
+                                keystoreFile="${idp.home}/credentials/idp.crt"
+                                keystorePassword="${idp.keystore.pass}" />
 
                 <copy todir="${idp.home}/bin" preservelastmodified="true">
                     <fileset dir="${tools.dir}" />
