fix filenam typo
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2669 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -192,7 +192,7 @@
                 <selfSignedCert hostname="${idp.hostname}"
                                 privateKeyFile="${idp.home}/credentials/idp.key"
                                 certificateFile="${idp.home}/credentials/idp.crt"
-                                keystoreFile="${idp.home}/credentials/idp.crt"
+                                keystoreFile="${idp.home}/credentials/idp.jks"
                                 keystorePassword="${idp.keystore.pass}" />
 
                 <copy todir="${idp.home}/bin" preservelastmodified="true">
