Place IdP entity ID into subject alt name of cert
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2681 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -194,7 +194,8 @@
                                 privateKeyFile="${idp.home}/credentials/idp.key"
                                 certificateFile="${idp.home}/credentials/idp.crt"
                                 keystoreFile="${idp.home}/credentials/idp.jks"
-                                keystorePassword="${idp.keystore.pass}" />
+                                keystorePassword="${idp.keystore.pass}"
+                                uriSubjectAltName="${idp.entity.id}"/>
 
                 <copy todir="${idp.home}/bin" preservelastmodified="true">
                     <fileset dir="${tools.dir}" />
