--- a/build.xml
+++ b/build.xml
@@ -195,7 +195,7 @@
                                 certificateFile="${idp.home}/credentials/idp.crt"
                                 keystoreFile="${idp.home}/credentials/idp.jks"
                                 keystorePassword="${idp.keystore.pass}"
-                                uriSubjectAltName="${idp.entity.id}"/>
+                                uriSubjectAltNames="${idp.entity.id}"/>
 
                 <copy todir="${idp.home}/bin" preservelastmodified="true">
                     <fileset dir="${tools.dir}" />
