--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.internet2.shibboleth</groupId>
-    <artifactId>identityprovider</artifactId>
+    <groupId>edu.internet2.middleware</groupId>
+    <artifactId>shibboleth-identityprovider</artifactId>
     <version>2.1.0</version>
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
@@ -28,7 +28,7 @@
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
-            <groupId>edu.internet2.shibboleth</groupId>
+            <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
             <version>1.1.0</version>
         </dependency>
